[gd_scene load_steps=9 format=3 uid="uid://brsva2k2lkgfb"]

[ext_resource type="Script" path="res://Scripts/caixa.gd" id="1_mx8gc"]
[ext_resource type="Texture2D" uid="uid://cg6n1m02fgryl" path="res://icon.svg" id="2_ed2k2"]

[sub_resource type="Animation" id="Animation_bq20f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_dqsf6"]
resource_name = "go_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -100), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_go_down"
}]
}

[sub_resource type="Animation" id="Animation_lvmq3"]
resource_name = "go_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}

[sub_resource type="Animation" id="Animation_0yctg"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bw4e3"]
_data = {
"RESET": SubResource("Animation_bq20f"),
"go_down": SubResource("Animation_dqsf6"),
"go_up": SubResource("Animation_lvmq3"),
"hit": SubResource("Animation_0yctg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nov27"]
size = Vector2(114, 118)

[node name="Caixa" type="Node2D"]
script = ExtResource("1_mx8gc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ed2k2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bw4e3")
}

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_nov27")

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="BounceTime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="BounceTime" to="." method="_on_bounce_time_timeout"]
